src/test/deca/syntax/invalid/while-wrongOrder.synt
while-wrongOrder.deca:2: